[gd_scene load_steps=10 format=3 uid="uid://clctep8pf5a7r"]

[ext_resource type="Script" path="res://scripts/chest.gd" id="1_lubt2"]
[ext_resource type="Texture2D" uid="uid://bejyiswoukfcw" path="res://assets/custom assets/chests/chest_green.png" id="2_xf37x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xrejy"]
radius = 11.0
height = 32.0

[sub_resource type="Animation" id="Animation_duhwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_l77o8"]
resource_name = "close"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_wnmae"]
resource_name = "open"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b2d8i"]
_data = {
"RESET": SubResource("Animation_duhwl"),
"close": SubResource("Animation_l77o8"),
"open": SubResource("Animation_wnmae")
}

[sub_resource type="Gradient" id="Gradient_kyh2k"]
offsets = PackedFloat32Array(0, 0.75974)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0mjcl"]
gradient = SubResource("Gradient_kyh2k")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="ChestGreen" type="Area2D" groups=["chest"]]
collision_layer = 128
collision_mask = 2
script = ExtResource("1_lubt2")
chest_color = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xf37x")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xrejy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b2d8i")
}
autoplay = "close"

[node name="ActivateLight" type="PointLight2D" parent="."]
color = Color(0.305882, 0.356863, 0.192157, 1)
texture = SubResource("GradientTexture2D_0mjcl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
